# satdepsolver-cpp

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: Common.h  DisplayClause.h  DisplayDecisionMap.h  DisplayMergedSolvable.h  DisplayName.h  DisplaySolvable.h  DisplayUnsat.h  DisplayVersionSet.h  Pool.h  Problem.h  Range.h  Solvable.h
src/internal/: Arena.h  ArenaId.h  CandidatesId.h  ClauseId.h  DependenciesId.h  FrozenCopyMap.h  FrozenMap.h  LearntClauseId.h  Mapping.h  NameId.h  SolvableId.h  StringId.h  VersionSetId.h  tracing.h
src/solver/: Clause.h  Decision.h  DecisionMap.h  DecisionTracker.h  PropagationError.h  Solver.h  SolverCache.h  UnsolvableOrCancelled.h  WatchMap.h
src/tests/: solver.h  test_resolvo.cc
src/tests/snapshots/: test_excluded.snap  test_merge_installable.snap  test_no_backtracking.snap  test_resolve_and_cancel.snap  test_resolve_favor_with_conflict.snap  test_root_excluded.snap  test_unsat_after_backtracking.snap  test_unsat_bluesky_conflict.snap  test_unsat_constrains_2.snap  test_unsat_incompatible_root_requirements.snap  test_unsat_locked_and_excluded.snap  test_unsat_no_candidates_for_child_1.snap  test_unsat_no_candidates_for_child_2.snap
tests/: solver.h  test_resolvo.cc
tests/snapshots/: test_excluded.snap  test_merge_excluded.snap  test_resolve_cyclic.snap  test_resolve_with_concurrent_metadata_fetching.snap  test_resolve_with_conflict.snap  test_unsat_applies_graph_compression.snap  test_unsat_constrains.snap  test_unsat_constrains_2.snap  test_unsat_locked_and_excluded.snap  test_unsat_missing_top_level_dep_1.snap  test_unsat_missing_top_level_dep_2.snap  test_unsat_no_candidates_for_child_2.snap  test_unsat_pubgrub_article.snap
